# playground-1007

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
agents/: AGENT_TEAM.md
docs/architecture/: system_overview.md
projects/p1_burn_severity/: README.md
projects/p1_burn_severity/configs/: default.yaml
projects/p1_burn_severity/docs/: p1_technical_report.md
projects/p1_burn_severity/notebooks/: 01_severity_exploration.ipynb
projects/p1_burn_severity/src/: acquisition.py  dashboard.py  pipeline.py  preprocessing.py  recovery.py  severity.py
projects/p1_burn_severity/tests/: conftest.py  test_acceptance.py  test_acquisition.py  test_e2e.py  test_integration.py  test_pipeline.py  test_preprocessing.py  test_recovery.py  test_severity.py  test_smoke.py  test_system.py
projects/p2_llm_spatial_query/: README.md
projects/p2_llm_spatial_query/configs/: default.yaml  few_shot_queries.yaml  schema_metadata.yaml
projects/p2_llm_spatial_query/docs/: p2_technical_report.md
projects/p2_llm_spatial_query/notebooks/: 01_query_demo.ipynb
projects/p2_llm_spatial_query/src/: executor.py  formatter.py  pipeline.py  prompt_builder.py  schema_extractor.py  sql_generator.py  sql_validator.py
projects/p3_itc_delineation/: README.md
projects/p4_habitat_suitability/: README.md
shared/data/: download_3dep.py  download_occurrences.py  download_sentinel2.py  download_worldclim.py  generate_synthetic.py
shared/tests/: conftest.py  test_utils.py
shared/utils/: allometry.py  config.py  crs.py  io.py  logging.py  raster.py
(+58 files in other folders)
