[project]
name = "sierra-spatial-portfolio"
version = "0.1.0"
description = "Advanced geospatial analytics for Sierra Nevada forest management"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "William Steinley"}]

[tool.pytest.ini_options]
testpaths = ["projects", "shared"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --import-mode=importlib"

[tool.coverage.run]
source = ["projects", "shared"]
omit = [
    "*/tests/*",
    "*/notebooks/*",
    "*/__pycache__/*",
    "shared/data/download_*.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]
